[gd_scene load_steps=4 format=3 uid="uid://c40qmm5klnxtj"]

[ext_resource type="Texture2D" uid="uid://f5dt6ydwxsxe" path="res://assets/sprites/birds/yellow.png" id="1_agfs1"]
[ext_resource type="Script" uid="uid://qqruoa5sok2" path="res://views/bird_enitity.gd" id="1_rkhd4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lrhn5"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="BirdEnitity" type="Control"]
custom_minimum_size = Vector2(135, 200)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1024.0
offset_bottom = -452.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rkhd4")

[node name="VboxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NameLabel" type="Label" parent="VboxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="VboxContainer"]
custom_minimum_size = Vector2(135, 135)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lrhn5")

[node name="CenterContainer" type="CenterContainer" parent="VboxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Avatar" type="TextureRect" parent="VboxContainer/Panel/CenterContainer"]
layout_mode = 2
texture = ExtResource("1_agfs1")

[node name="SkillBallContainer" type="GridContainer" parent="VboxContainer/Panel"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
columns = 4

[node name="HitLabel" type="Label" parent="VboxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Hit:"
horizontal_alignment = 1
